# Revanced-auto

./: .coverage  .editorconfig  .env  .gitattributes  .gitignore  .pair-programming-session.md  .pre-commit-config.yaml  .project-structure.md  .shellcheckrc  .shfmt  .taplo.toml  .yamlfmt  .yamllint.yml  AGENTS.md  CHANGES.md  CLAUDE.md  CONFIG.md  FEATURE-COMPLETE.md  IMPLEMENTATION-STATUS.md  LINTING.md  MULTI-SOURCE-IMPLEMENTATION.md  Makefile  OPTIMIZATION_IMPROVEMENTS.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PLAN.md  PRD.md  PROJECT_INDEX.md  RALPH-LOOP-SUMMARY.md  README.md  REFACTORING.md  SECURITY.md  TEST-RESULTS.md  TODO.md  assoc_test.sh  biome.json  build-termux.sh  build.md  build.sh  check-env.sh  (+21 more)
.claude-dev-helper/: open-files.json
.claude/memories/: project_memory.json
.github/: WORKFLOWS.md  WORKFLOW_IMPROVEMENTS.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/setup-build-env/: action.yml
.github/actions/setup-environment/: action.yml
.github/instructions/: bash.instructions.md  github-actions-ci-cd-best-practices.instructions.md  pr-assistant.instructions.md  python.instructions.md
.github/skills/copilot-init/: SKILL.md
.github/skills/validate/: SKILL.md
.github/workflows/: build-daily.yml  build-exp.yml  build-manual.yml  build-pr.yml  build.yml  ci.yml  copilot-setup-steps.yml  dependency-check.yml  fmt.yml  kilo.yml  lint.yml  mise.yml  pages.yml  shellcheck.yml  telegram-notify.yml
.kilo/: kilo.json  kilo.json.bak
.kilo/plans/: 1782267197077-.md  1783351366500-morphe-ecosystem-integration.md
.plugin-config/: ai-pair-programming.json  claude-dev-helper.json
.serena/: project.yml
.summary_files/: code_summary.md
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/refactor_20260113/: metadata.json  plan.md  spec.md
docs/: CONFIG.md  FEATURES.md  LINKS.md  PATCHES.md  PHASE2-SURVEY.md  README.md  _config.yml  generator.html  index.html  style.css
docs/config-generator/: index.html
docs/plans/: 2026-01-18-repo-cleanup-and-workflow-fixes.md  2026-02-22-claude-code-automations-design.md  2026-02-22-claude-code-automations.md
docs/sessions/: 20260112-210533-session.md  20260113-051922-session.md
lib/: README.md  cache.sh  checks.sh  config.sh  download.sh  helpers.sh  logger.sh  network.sh  patching.sh  prebuilts.sh
plans/: cleanup_and_maintenance.md
revanced_auto.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: README.md  __init__.py  aapt2-optimize.sh  aapt2-resources.cfg  apkmirror_search.py  apkmonk_search.py  apkpure_search.py  aptoide_search.py  changelog-generator.sh  changelog_parser.py  cli.py  dependency-checker.sh  download-gmscore.sh  generate_matrix.sh  html_parser.py  lint.sh  optimize-assets.sh  release-manager.sh  toml_get.py  unused-strings.sh  uptodown_search.py  version_tracker.py
scripts/builder/: __init__.py  app_processor.py  cli_profiles.py  config.py  module_gen.py  notifier.py  patcher.py
scripts/builder/engines/: __init__.py  apk_optimizer.py  dtlx.py  lspatch.py  media_optimizer.py  rkpairip.py  string_cleaner.py  whatsapp_patcher.py
scripts/lib/: __init__.py  app_processor.sh  args.py  builder.py  cache.py  cache.sh  checks.sh  config.py  config.sh  download.sh  download.sh.orig  gmscore.sh  helpers.sh  logger.sh  logging.py  network.sh  patching.sh  plugins.py  prebuilts.sh  version_tracker.py
scripts/plugins/: __init__.py
scripts/scrapers/: __init__.py  apkmirror.py  apkmonk.py  apkpure.py  aptoide.py  archive.py  base.py  download_manager.py  external_bundles.py  uptodown.py
scripts/search/: __init__.py  version_resolver.py
scripts/utils/: __init__.py  ad_patterns.py  apk.py  apk_io.py  java.py  network.py  process.py
tests/: __init__.py  benchmark_download.sh  config-multi-source-test.toml  config-single-source-test.toml  conftest.py  security_repro_zip_slip.py  test-multi-source.sh  test_apk.py  test_apkmirror_search.py  test_apkmirror_search.sh  test_apkmonk_scraper.py  test_apkmonk_search.py  test_apkpure_search.py  test_app_processor.py  test_aptoide_search.py  test_builder.py  test_cache.py  test_cache_cli.py  test_cache_lib.py  test_cli_profiles.py  test_config.py  test_engines.py  test_external_bundles.py  test_helpers_fetch_gmscore.sh  test_helpers_format_version.sh  test_helpers_get_highest_ver.sh  test_helpers_isoneof.sh  test_helpers_semver_validate.sh  test_html_parser.py  test_java.py  test_lib_config.py  test_network.py  test_network_security.py  test_notifier.py  test_patcher.py  test_process.py  test_toml_get.py  test_uptodown_functional.py  test_uptodown_search.py  test_version_resolver.py  (+3 more)
tests/fixtures/: apkmirror_mock.html
tests/scrapers/: __init__.py  test_apkmirror.py
