[project]
name = "revanced-auto"
version = "1.0.0"
description = "ReVanced Builder: Automated APK patching and building system"
requires-python = ">=3.13"
readme = "README.md"
license = { file = "LICENSE" }
authors = [ { name = "ReVanced Builder Contributors" } ]
dependencies = [
    "selectolax>=0.3.21",
    "orjson>=3.10.0",
]

[dependency-groups]
dev = [
    "prek>=0.3.4",
    "ruff>=0.15.4",
    "mypy>=1.15.0",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "pytest-durations>=1.3.0",
    "hypothesis>=6.100.0",
    "types-toml>=0.10.8.20240310",
    "flake8>=7.3.0",
    "flake8-2020>=1.8.1",
    "flake8-breakpoint>=1.1.0",
    "flake8-bugbear>=24.12.12",
    "flake8-builtins>=3.1.0",
    "flake8-commas>=4.0.0",
    "flake8-comments>=0.1.2",
    "flake8-eradicate>=1.5.0",
    "flake8-executable>=2.1.3",
    "flake8-fixme>=1.1.1",
    "flake8-isort>=6.1.2",
    "flake8-plugin-utils>=1.3.3",
    "flake8-raise>=0.0.5",
    "flake8-simplify>=0.21.0",
    "flake8-super>=0.1.3",
    "isort>=6.0.1",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py313"
fix = true
exclude = [
  ".git",
  ".cache",
  ".var",
  ".venv",
  "venv",
  "node_modules",
  "__pycache__",
  "*.pyc",
]

[tool.ruff.lint]
select = [ "ALL"]
ignore = [
  "E501",   # line too long (handled by formatter)
  "T201",   # print() in CLI scripts is intentional
  "BLE001", # broad exception in CLI error handlers is acceptable
  "COM812", # trailing comma conflicts with formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = [ "scripts" ]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
strict = true
strict_optional = true
disallow_any_generics = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
warn_unreachable = true
ignore_missing_imports = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "unused-awaitable", "possibly-undefined"]
