[project]
name = "revanced-auto"
version = "1.0.0"
description = "ReVanced Builder: Automated APK patching and building system"
requires-python = ">=3.13"
readme = "README.md"
license = { file = "LICENSE" }
authors = [ { name = "ReVanced Builder Contributors" } ]
dependencies = [
    "selectolax>=0.3.21",
    "orjson>=3.10.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "prek>=0.3.4",
    "ruff>=0.15.4",
    "mypy>=1.15.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "pytest-durations>=1.3.0",
    "hypothesis>=6.100.0",
    "types-toml>=0.10.8.20240310",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py313"
fix = true
exclude = [
  ".git",
  ".cache",
  ".var",
  ".venv",
  "venv",
  "node_modules",
  "__pycache__",
  "*.pyc",
]

[tool.ruff.lint]
select = [ "ALL"]
ignore = [
  "E501",   # line too long (handled by formatter)
  "T201",   # print() in CLI scripts is intentional
  "BLE001", # broad exception in CLI error handlers is acceptable
  "COM812", # trailing comma conflicts with formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = [ "scripts" ]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
strict = true
strict_optional = true
disallow_any_generics = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
warn_unreachable = true
ignore_missing_imports = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "unused-awaitable", "possibly-undefined"]
