[project]
name = "revanced-auto"
version = "1.0.0"
description = "ReVanced Builder: Automated APK patching and building system"
requires-python = ">=3.13"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "ReVanced Builder Contributors" }]
dependencies = [
  "httpx>=0.28.1",
  "orjson>=3.11.8",
  "selectolax>=0.3.21",
]

[dependency-groups]
dev = [
  "hypothesis>=6.100.0",
  "mypy>=1.20.0",
  "prek>=0.3.4",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=6.0.0",
  "pytest-durations>=1.3.0",
  "ruff>=0.15.10",
  "types-toml>=0.10.8.20240310",
]

[tool.mypy]
python_version = "3.13"
strict = true
strict_optional = true
disallow_any_generics = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
warn_unreachable = true
ignore_missing_imports = true
show_error_codes = true
enable_error_code = [
  "ignore-without-code",
  "unused-awaitable",
  "possibly-undefined"
]

[tool.ruff]
line-length = 120
target-version = "py313"
fix = true
exclude = [
  ".git",
  ".cache",
  ".var",
  ".venv",
  "venv",
  "node_modules",
  "__pycache__",
  "*.pyc",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "EXE001",  # shebang executability is not enforced for repo-managed Python modules
  "E501",  # line too long (handled by formatter)
  "T201",  # print() in CLI scripts is intentional
  "BLE001",  # broad exception in CLI error handlers is acceptable
  "COM812",  # trailing comma conflicts with formatter
]

[tool.ruff.lint.per-file-ignores]
"scripts/builder/*.py" = [
  "ANN204",
  "ANN401",
  "ARG002",
  "B905",
  "C901",
  "D107",
  "EM101",
  "EM102",
  "FBT001",
  "FBT002",
  "FBT003",
  "F841",
  "PERF401",
  "PERF402",
  "PLC0415",
  "PLC0206",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "PLR1714",
  "PLR2004",
  "PLW1510",
  "PLW2901",
  "PYI034",
  "PYI036",
  "PTH123",
  "RET504",
  "RUF005",
  "RUF012",
  "S603",
  "S607",
  "TC003",
  "TRY003",
  "TRY300",
  "TRY400",
  "UP036",
]
"scripts/lib/cache.py" = ["FBT001", "FBT002", "PLR2004", "SIM103"]
"scripts/cli.py" = ["PLC0415", "RET503", "TRY300"]
"scripts/lib/config.py" = ["PLC0415"]
"scripts/lib/version_tracker.py" = ["PLC0415"]
"scripts/scrapers/*.py" = [
  "ARG002",
  "C901",
  "D101",
  "D102",
  "D105",
  "D107",
  "D417",
  "E402",
  "EM102",
  "FBT001",
  "FBT002",
  "FBT003",
  "F841",
  "PLC0415",
  "PLR0913",
  "PLR1714",
  "RUF012",
  "S603",
  "S607",
  "TC001",
  "TC003",
  "TRY003",
  "TRY300",
]
"scripts/search/version_resolver.py" = [
  "ARG002",
  "D402",
  "PLR2004",
  "RET504",
  "SIM103"
]
"scripts/utils/*.py" = [
  "ANN401",
  "ASYNC230",
  "ASYNC240",
  "C901",
  "D105",
  "EM101",
  "EM102",
  "PLC0415",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR2004",
  "PYI034",
  "PYI036",
  "PTH123",
  "RUF005",
  "RUF012",
  "S603",
  "S607",
  "SIM102",
  "SIM115",
  "TRY003",
  "TRY004",
  "TRY300",
  "TRY400",
]
"tests/*.py" = ["D101", "D102", "D103", "PLR2004", "RUF005", "SLF001"]

[tool.ruff.lint.isort]
known-first-party = ["scripts"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.uv]
package = false
